.circleci/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: azs
  namespace: default
  labels:
    allow.http: "false"
    application: azs
spec:
  replicas: 3
  selector:
    matchLabels:
      application: azs
  template:
    metadata:
      labels:
        application: azs
    spec:
      containers:
      - name: mycrypto
        image: llucasbrandao/adm-azs-shipping:$BUILD_NUM
        ports:
        - containerPort: 8080
        securityContext:
          privileged: true
