.circleci/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: azs
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 8080 # Porta que a aplicação está rodando no POD
  selector:
    application: azs
